--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "node.js_express_mongodb_crud_youtube",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "repository": {
         "type": "git",
