--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     },
     "homepage": "https://github.com/AnosKh/Node.js_Express_MongoDB_CRUD_Youtube#readme",
     "dependencies": {
+        "@handlebars/allow-prototype-access": "^1.0.3",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "express-handlebars": "^5.2.0",
+        "handlebars": "^4.7.6",
         "mongoose": "^5.11.9"
     },
     "devDependencies": {
